# minion

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  README.md  analyze_changes.py  config.toml  find-definitions.sh  run_pathfinding_test.sh  test_pathfinding.sh
assets/enemies/: dark-knight-high.glb  dark-knight-low.glb  dark-knight-med.glb
assets/players/: hooded-high.glb  hooded-low.glb  hooded-med.glb
examples/: README.md  add_objects.rs  filter_spawns.rs  map_info.rs  merge_maps.rs  minimal_movement.rs  smooth_terrain.rs
notes/: ARCHITECTURE_DECISIONS.md  DEVELOPMENT_WORKFLOWS.md  MOVEMENT_TROUBLESHOOTING.md  README.md  TERRAIN_SYSTEM_GUIDE.md  cli-design-specification.md  environment_pathfinding_integration_design.md  fallback_strategies.md  implementation-plan.md  integration_plan.md  movement_debugging_strategy.md  movement_debugging_summary.md  obstacle_collision_trait_architecture.md  obstacle_trait_implementation_plan.md  pathfinding_architecture_design.md  pathfinding_implementation_plan.md  pathfinding_system_summary.md  stage6-procedural-terrain-summary.md  systematic_debugging_protocol.md  terrain-following-research.md  terrain-generation-architecture.md  terrain-generation-research.md  terrain_architecture_design.md  terrain_generation_research.md
src/: config.rs  lib.rs  main.rs
src/components/: mod.rs
src/config/: range_types.rs
src/game_logic/: combat.rs  damage.rs  debug.rs  enemy.rs  errors.rs  mod.rs  movement.rs  names.rs  player.rs  spawning.rs
src/map/: mod.rs
src/pathfinding/: grid_blocking.rs  mod.rs
src/plugins/: combat.rs  ui.rs  (+9 more)
(+14 files in other folders)
