[package]
name = "minion"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["wayland"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rand = "0.8"
derive_more = { version = "1.0", features = ["add", "mul", "add_assign", "display", "from"] }
thiserror = "2.0"
bevy_egui = "0.35.1"
validator = { version = "0.18", features = ["derive"] }
