[package]
name = "minion"
version = "0.1.0"
edition = "2024"
default-run = "minion"

[dependencies]
bevy = { version = "0.16", features = ["jpeg", "wayland"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rand = "0.8"
derive_more = { version = "1.0", features = ["add", "mul", "add_assign", "display", "from"] }
thiserror = "2.0"
bevy_egui = "0.35.1"
validator = { version = "0.18", features = ["derive"] }
image = { version = "0.25.6", features = ["jpeg"] }
egui_extras = { version = "0.31.1", features = ["image"] }
bevy_rapier3d = { version = "0.30.0", features = ["simd-stable", "debug-render-3d"] }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
noise = "0.9.0"
rand_pcg = "0.3"
